--- a/css/master.css
+++ b/css/master.css
@@ -15,18 +15,25 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 40px;
     color: #333;
+    margin: auto;
+}
+
+h2 {
+    font-size: 16px;
+    font-weight: lighter;
+    color: rgb(1, 1, 65)
 }
 
 label {
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 30px;
     display: block;
 }
 
 select {
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 5px;
     width: 100%;
 }
@@ -52,5 +59,3 @@ footer {
     color: #f1eeee;
     font-size: 12px;
   }
-
-  
