--- a/css/master.css
+++ b/css/master.css
@@ -3,9 +3,17 @@ body {
     margin: 0;
     padding: 0;
     background-color: #060f2c;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     max-width: 600px;
     margin: 50px  auto;
@@ -53,7 +61,7 @@ button {
 }
 
 footer {
-    margin-top: 20px;
+    margin-top: auto;
     padding: 10px 0;
     text-align: center;
     color: #f1eeee;
