--- a/css/master.css
+++ b/css/master.css
@@ -6,14 +6,11 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     max-width: 600px;
     margin: 50px  auto;
@@ -61,9 +58,14 @@ button {
 }
 
 footer {
-    margin-top: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     padding: 10px 0;
     text-align: center;
     color: #f1eeee;
     font-size: 12px;
+    background-color: #060f2c;
+    z-index: 1;
   }
